# Informatyka-Algorytmiczna

myCompiler/: CMakeLists.txt  someProgram.txt
myCompiler/src/SymbolTable/: SymbolTable.cpp  SymbolTable.hpp
myCompiler/src/ast/: Ast.cpp  Ast.hpp  Enums.hpp  Location.hpp
myCompiler/src/ast/argDeclaration/: ArgDeclaration.cpp  ArgDeclaration.hpp
myCompiler/src/ast/args/: Args.cpp  Args.hpp
myCompiler/src/ast/commands/: Command.cpp  Command.hpp  CommandAssign.cpp  CommandAssign.hpp  CommandDownTo.cpp  CommandDownTo.hpp  CommandForTo.cpp  CommandForTo.hpp  CommandIf.cpp  CommandIf.hpp  CommandIfElse.cpp  CommandIfElse.hpp  CommandProcCall.cpp  CommandProcCall.hpp  CommandRead.cpp  CommandRead.hpp  CommandRepeat.cpp  CommandRepeat.hpp  CommandWhile.cpp  CommandWhile.hpp  CommandWrite.cpp  CommandWrite.hpp
myCompiler/src/ast/conditions/: Condition.cpp  Condition.hpp  ConditionEq.cpp  ConditionEq.hpp  ConditionGEq.cpp  ConditionGEq.hpp  ConditionGt.cpp  ConditionGt.hpp  ConditionLEq.cpp  ConditionLEq.hpp  ConditionLt.cpp  ConditionLt.hpp  ConditionNEq.cpp  ConditionNEq.hpp
myCompiler/src/ast/declarations/: Declaration.cpp  Declaration.hpp  DeclarationPid.cpp  DeclarationPid.hpp  DeclarationTable.cpp  DeclarationTable.hpp
myCompiler/src/ast/expressions/: Expression.cpp  Expression.hpp  ExpressionDiv.cpp  ExpressionDiv.hpp  ExpressionMinus.cpp  ExpressionMinus.hpp  ExpressionMod.cpp  (+9 more)
myCompiler/src/astUtilities/: makeArgs.hpp  makeArgsDeclaration.hpp  makeCommands.hpp  makeDeclarations.hpp  makeProcedures.hpp
myCompiler/src/main/: main.cpp  parser.ypp  scanner.hpp  scanner.lpp
(+447 files in other folders)
